# signed-former

./: .gitignore  CLAUDE.md  README.md  baseline.sh  experiment.sh  ideas_log.txt  implementation.md  optimization.md  program.md  projection_idea.md  pyproject.toml  result_long_term_forecast.txt  results.tsv  run.py
.claude/: .nfs0000000016e58066000000e7  .nfs0000000016e5807d000000e8
.claude/agents/: paper-researcher.md  paper-scout.md  research-pipeline.md
data_provider/: data_factory.py  data_loader.py
experiments/: exp_basic.py  exp_long_term_forecasting.py  exp_long_term_forecasting_partial.py
memory/: processed_papers.md
model/: CustomModel.py
research_ideas/: CycleNet.md  DBLoss.md  FITS.md  FilterNet.md  FreDN.md  MambaTS.md  WPMixer.md
scripts/: push_tracking.sh
utils/: tools.py
