[project]
name = "paper"
version = "4.0"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "absl-py>=1.2.0",
    "einops>=0.4.1",
    "h5py>=3.10",
    "keopscore>=2.1",
    "opt-einsum>=3.3.0",
    "pandas>=2.0",
    "pytorch-wavelet",
    "PyWavelets>=1.6",
    "scikit-image>=0.21",
    "scikit-learn>=1.0.2",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "sympy>=1.13.1",
    "torch>=2.5.1",
    "numpy>=1.24",
    "matplotlib>=3.5.3",
    "pv>=0.1.3",
    "tqdm>=4.67.1",
    "ipykernel>=6.31.0",
    "seaborn>=0.13.2",
    "reformer-pytorch>=1.4.4",
    "setuptools>=75,<82",
    "dysts>=0.96",
    "triton>=3.1.0",
]

[tool.uv]
prerelease = "allow"
override-dependencies = [
    "triton>=1.0.0; sys_platform == 'never'",
]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-nightly-cu128", marker = "sys_platform == 'linux'" },
]
